--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/pshihn/rough-website#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy": "1.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0"
   }
 }
