--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx eleventy",
-    "serve": "npx eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "npx eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -20,7 +19,7 @@
   },
   "homepage": "https://github.com/pshihn/rough-website#readme",
   "devDependencies": {
-    "@11ty/eleventy": "1.0.0",
+    "@11ty/eleventy": "github:11ty/eleventy",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0"
   }
 }
